# native-Waveform-Image-Format---WIF

./: .gitignore  BLUEPRINT.md  CMakeLists.txt  PROJECT_STRUCTURE.md
src/cli/: decode_plane.c  evaluate_plane.c  line_encode_plane.c  preprocess.c  rans_route_map.c  wave_block_analyser.c  ycbcr_to_png.c
src/wif/encoders/line encoder/: line_encoder.c  lines_binary_decoder_rans.c  lines_binary_encoder_rans.c
src/wif/evaluators/: eye_entropy_evaluator.c  eye_entropy_evaluator.h
src/wif/utils/: decode_plane.c  decode_plane.h  preprocessor.c  preprocessor.h  rans_route_map.c  rans_route_map.h  ycbcr_to_png.c  ycbcr_to_png.h
